# cortex

./: .gitignore  AGENTS.md  CLAUDE.md  biome.json  package.json  tsconfig.json
.claude/: settings.json
.github/workflows/: ci.yml  publish-plugin-api.yml  release.yml
apps/desktop/: CLAUDE.md  package.json  tsconfig.json  vite.config.d.ts  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  main.tsx  propertiesRuntime.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json  settings.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: dock_menu.rs  lib.rs
apps/desktop/src-tauri/src/commands/: appearance.rs  auth.rs  devices.rs  dialog.rs  fs.rs  members.rs  menu.rs  mod.rs  registry.rs  remote_vault.rs  sync.rs  vault.rs  watcher.rs  window.rs
apps/desktop/src-tauri/src/device/: mod.rs
apps/desktop/src-tauri/src/keychain/: mod.rs
apps/desktop/src-tauri/src/sync/: auth.rs  conflict.rs  crypto.rs  db.rs  downloader.rs  engine.rs  http.rs  ignore.rs  initial.rs  mod.rs  queue.rs  reconcile.rs  sse.rs  state.rs  uploader.rs
apps/web/: mdx-components.tsx  next.config.ts  package.json  tsconfig.json
apps/web/.next/: build-manifest.json  fallback-build-manifest.json  (+2 more)
docs/: cli.md  cortex-core.md  cortex-design-system-showcase.html  cortex-landing.html  cortex-markdown-processing.md  cortex-suggestions.md  cortex_desktop_sync_spec.md  cortex_sync_extended_crdt_spec.md  development-roadmap.md  obsidian-sync.md  plugin-idea.md  sync-implementation-tracker.md
plugins/github-emoji/: package.json
scripts/: check-workspace-boundaries.ts
(+376 files in other folders)
