[package]
name = "cortex-desktop"
version = "0.1.0"
description = "Cortex Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "cortex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
notify = "7"
blake3 = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tokio = { version = "1", features = ["sync"] }
font-kit = "0.14"
